# v5

./: -e  .gitattributes  .gitignore  AGENTS.md  actual  commanded  event  mcs  pclk  pos_fb  program  restart_required  root  rtcp_force_off  source_path  user_data  系统代码架构硬边界守则.md  项目软硬件架构和后期修改指导说明.md
.github/workflows/: v5-fast.yml
0硬件资料/: Z20 ZYNQ_IO.xdc  Z20 ZYNQ开发板IO引脚分配表.xlsx  _z20_base_schematic_text.txt
0硬件资料/Z20_LCD驱动/: 7寸与10.1寸屏幕模块差异说明.md  README.md
8ax-dealer-client-source/8ax.DealerClient/: 8ax.DealerClient.csproj  ApiClient.cs  ChangePasswordForm.cs  LocalSettings.cs  MachineFingerprint.cs  MainForm.Actions.cs  MainForm.cs  Models.cs  Program.cs  RegisterDealerForm.cs  app.manifest
8ax-factory-client-source/: README.md  start-vps3-admin-tunnel.ps1  发布记录.md
8ax-factory-client-source/8ax.FactoryClient/: 8ax.FactoryClient.csproj  ApiClient.cs  ApiResult.cs  DeviceIpAccessDialog.cs  DriveProfilePublishPanel.cs  LocalSettings.cs  MainForm.Dealers.cs  MainForm.Devices.cs  MainForm.Layout.cs  MainForm.RemoteSsh.cs  MainForm.Upgrades.cs  MainForm.cs  Models.cs  OtaPublishPanel.cs  Program.cs  RequestParser.cs  app.manifest
8ax-factory-client-source/vps-admin-api/: 8ax-ota-admin-api.service  vps_drive_profile_admin.py  vps_ota_admin_api.py  vps_private_binding.py
8ax-factory-client-source/vps-auth-gateway/: 30-remote-ssh.conf  gateway.py  remote_ssh_authorized_keys.sh  remote_ssh_gateway.py  sshd_8ax_remote_ssh.conf
8ax-win/: .gitignore  8ax.WinRemote.sln  README.md  交接.md  板端程序更新与PL端加密芯片方案.md  界面按钮.md
8ax-win/tools/: generate_winremote_update_signing_key.py  publish_winremote_update.ps1  sign_winremote_update_manifest.py
8ax驱动映射表/: 制作驱动映射表所需厂家文件清单.md
8ax驱动映射表/汇川SV630N/: 下载来源清单.md
board/: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json
board/app/: CMakeLists.txt  lv_conf.h
board/app/include/: v5_app.h  v5_boot_closure.h  v5_parameter_table.h  v5_process_residency.h  v5_runtime_registry.h  v5_status_shm.h  v5_toolpath_viewport.h
board/app/src/: main.c  v5_boot_closure.c  v5_bus_status_reader.c  v5_bus_status_reader.h  v5_button_visuals.c  v5_button_visuals.h  v5_command_first_point.c  v5_command_first_point.h  v5_command_motion.c  v5_command_motion.h  v5_command_override.h  v5_command_program.c  v5_command_program.h  v5_command_rtcp.c  v5_command_rtcp.h  v5_command_start.h  v5_command_wrappers_smoke.c  v5_coordinate_digits.c  v5_coordinate_digits.h  v5_coordinate_digits_smoke.c  v5_coordinate_panel.c  v5_coordinate_panel.h  v5_layout_icon_masks.c  v5_layout_icon_masks.h  v5_layout_icons.c  v5_layout_icons.h  v5_lvgl_clock.c  v5_lvgl_clock.h  v5_lvgl_headless.c  v5_lvgl_headless.h  v5_lvgl_remote_display.c  v5_lvgl_remote_display.h  v5_lvgl_remote_display_capture.c  v5_lvgl_remote_display_capture.h  v5_lvgl_remote_display_delta.c  v5_lvgl_remote_display_delta.h  v5_lvgl_remote_display_delta_smoke.c  v5_lvgl_remote_input.c  v5_lvgl_remote_input.h  v5_lvgl_touch_input.c  (+114 more)
board/app/src/graphify-out/: .graphify_analysis.json  .graphify_learning.json  .graphify_python  .vocab.txt  graph.json  manifest.json
board/app/src/graphify-out/cache/: stat-index.json
board/app/src/graphify-out/memory/: query_20260717_002233_现在跑_g_代码的时候_cpu1_被拉爆是什么原因_如何满足功能需求改进_是否残留代码造成脏数据.md
board/app/src/graphify-out/reflections/: LESSONS.md
board/petalinux/: v5_bitbake_source_inventory.json  v5_petalinux_source_identity.json
board/tools/: backup_vm_v5_to_nas.sh  sync_win_source_to_vm.py  v5_board_power_cycle.py  v5_port_map.json  verify_v5_ethercat_commissioning.py
gc/: GCODE_WHITELIST.md
gd/: 7-27_dasheng1_rough_re_转换说明.md
linux/kernel/: v5_linux_source_identity.json
linux/realtime/: v5_realtime_source_identity.json
linuxcnc/: v5_linuxcnc_source_identity.json
linuxcnc/scripts/: linuxcnc.in
linuxcnc/src/: Makefile  configure.ac
lvgl_app/: README.md
new-vivado/: pl急停.md  交付.md  新vivado工程计划.md
new-vivado/z20_v1_5_hw_project/: .editorconfig  README.md  z20_v1_5_hw_project.xpr
repo_ignored/main_page_buttons_trajectory/: main_after_deploy.raw  main_after_execute_path_deploy.raw  main_buttons_after_clicks.raw  resident_pages_before_program.raw  resident_pages_final_main.raw  (+2 more)
repo_ignored/remote_input_tool/work/: CMakeLists.txt  collect_v5_remote_input_evidence.py  v5-ui-relay  v5_lvgl_remote_display.c  v5_lvgl_remote_display.h  v5_lvgl_remote_input.c  v5_lvgl_remote_input.h  v5_ui_shell.c
tools/: v5_board_power_cycle.py  v5_remote_frame_capture.py
vivado_hw_project/: .gitattributes  README.md  TIMING_MARGIN_IMPROVEMENT_PLAN.md  vivado_hw_project.xpr
vm-bak/: README_REBUILD_SOURCES_20260611.md  VM_BAK_COMPLETENESS_AUDIT_20260611.md  VM_BAK_ZERO_REBUILD_README_20260611.md
vm-v5/: .gitignore  .gitkeep
vm-v5/app/: lv_conf.h  (+1 more)
功能/: -触摸校准与输入链路说明.md  0-1开机参数入内存.md  0-2参数归类.md  0-3native_helper白名单与验收说明.md  0-4共享内存.md  0开机参数入内存.md  1-1加工坐标系偏移值保存与读取实现.md  1驱动命令映射表命令需求.md  2-1总线脉冲区别.md  2-2设置页总线模式设置项作用说明.md  2-3设置页每个按钮作用和目的.md  2-4设置页设置驱动按钮作用和目的.md  2-5轴设0软件偏置方案.md  2加工坐标系偏移值保存与读取实现.md  3-1主页面按钮功能.md  3-2回零按钮开机强制回零与双模式真实回零方案.md  3-3旋转轴等效角目标与解决方案.md  3-4UI刀路绘图顺序与状态稳定方案.md  3设置页总线模式设置项作用说明.md  3设置页每个按钮作用和目的.md  4设置页设置驱动按钮作用和目的.md  4轴设0软件偏置方案.md  6旋转轴等效角目标与解决方案.md  7主页面按钮功能.md  8回零按钮开机强制回零与双模式真实回零方案.md  LCD显示硬件链路.md  SD卡重建.md  UI刀路绘图顺序与状态稳定方案.md  VPS登录与项目对接说明.md  native_helper白名单与验收说明.md  全局通用配置需求.md  共享内存.md  参数归类.md  微内核.md  微内核错误提示完整映射表.md  总线脉冲区别.md  系统代码架构硬边界守则.md  自动闭环测试方式.md  跳窗提示方案.md  需求真源索引.md  (+1 more)
反重力/: 50m.md  Windows默认构建与CI改进方案.md  v5_remote_ui_relay_optimization.md  v5系统核心架构缺陷记录与整改规范.md  v5系统网关单线程同步阻塞与实时控制通道挂起隐患报告.md  项目全方位审查问题.md
待做工作/: 360度等效角与轨迹共享内存前置投影.md  AI后续工作备忘录.md  BUS一毫秒实时周期目标与落实方案.md  G代码运行CPU1综合优化实施指导.md  V3产品系统加固与安全诊断方案.md  board_power_cycle_last.json  cpu高原因.md  拆分.md  改进.md  改进重建.md  板端升级.md  死代码.md  沙粒.md  测试主页.md  测试设置.md  烧录.md  现有功能稳定与新功能稳步推进.md  瘦身.md  跑cc.md  遗留.md  降低CPU1占用.md  （暂缓）SDK开发初步设想.md  （暂缓）总线与脉冲混合输出及授权控制设计方案.md
截图/: v5_remote_frame_20260705T060617Z_auth_cleanup.json  v5_remote_frame_20260705T060940Z_tar_m.json  v5_remote_frame_20260705T122428.json  v5_remote_frame_probe.json
脉冲参数/: 脉冲模式需要增加的参数.md
(+1322 files in other folders)
